--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node --debug --use_strict app.js",
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zeeraa/snake-multiplayer.git"
+  },
   "dependencies": {
     "colors": "1.3.2",
     "express": "4.16.3",
@@ -16,5 +20,8 @@
   },
   "keywords": [],
   "author": "Zeeraa",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Zeeraa/snake-multiplayer/issues"
+  }
 }
