Change repo links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Snake",
+  "name": "snake-multiplayer",
   "version": "1.0.0",
   "description": "Multiplayer snake game",
   "main": "app.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Zeeraa/snake-multiplayer.git"
+    "url": "git+https://github.com/AntonUden/snake-multiplayer.git"
   },
   "dependencies": {
     "colors": "1.3.2",
@@ -19,9 +19,9 @@
     "ws": "6.0.0"
   },
   "keywords": [],
-  "author": "Zeeraa",
+  "author": "AntonUden",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Zeeraa/snake-multiplayer/issues"
+    "url": "https://github.com/AntonUden/snake-multiplayer/issues"
   }
 }
