--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "colors": "1.3.2",
     "express": "4.16.3",
-    "socket.io": "2.1.1",
+    "socket.io": "^4.2.0",
     "socketio-wildcard": "2.0.0",
-    "ws": "6.0.0"
+    "ws": "^8.2.2"
   },
   "keywords": [],
   "author": "AntonUden",
