--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "colors": "1.3.2",
     "express": "4.16.3",
-    "socket.io": "^4.2.0",
+    "socket.io": "4.5.3",
     "socketio-wildcard": "2.0.0",
     "ws": "^8.2.2"
   },
